fix(ui-forms): align to botton fields without label

--- a/scss/themes/pandev-style/components/ui-forms/_ui-forms.scss
+++ b/scss/themes/pandev-style/components/ui-forms/_ui-forms.scss
@@ -4,7 +4,7 @@ ui-input-number,
 ui-input-text,
 ui-input-textarea,
 ui-select {
-  @apply flex flex-col gap-1;
+  @apply flex flex-col gap-1 self-end;
 
   &[tabindex='0'] {
     @apply focus-visible:bg-secondary-200;
